--- a/html/html test.html
+++ b/html/html test.html
@@ -17,6 +17,17 @@
     <div id="map"></div>
     <script>
         var map = L.map('map').setView([10, 10] , 1);
+        var amountMarkers = 0;
+        var startMarker = null;
+        var endMarker = null;
+        var greenIcon = new L.Icon({
+            iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-green.png',
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        });
 
         L.tileLayer('https://api.maptiler.com/maps/basic/256/{z}/{x}/{y}.png?key=Q6IOPULDWc8NFSXjmQD5', {
             attribution: '<a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>',
@@ -26,23 +37,36 @@
             getCoords("/getClosestNode?lat="+e.latlng.lat+"&lon="+e.latlng.lng, coordsCallback);
         }
 
-        getCoords = function(theUrl, callback)
+        getCoords = function(Url, callback)
         {
             var request = new XMLHttpRequest();
             request.onreadystatechange = function() {
                 if (request.readyState == 4 && request.status == 200)
                     callback(request.responseText);
             }
-            request.open( "GET", theUrl, true );
+            request.open( "GET", Url, true );
             request.send( null );
         }
 
         function coordsCallback(data) {
             var coordsStrings = data.split(",");
-            console.log(data);
             let lat = coordsStrings[0];
             let lon = coordsStrings[1];
-            var marker = L.marker([lat, lon]).addTo(map);
+            if (amountMarkers == 0) {
+                startMarker = L.marker([lat, lon]).addTo(map);
+                console.log("Added blue starting marker at: " + coordsStrings)
+            }
+            if (amountMarkers == 1) {
+                endMarker = L.marker([lat, lon], {icon: greenIcon}).addTo(map);
+                console.log("Added green ending marker at: " + coordsStrings)
+            }
+            if (amountMarkers >= 2) {
+                map.removeLayer(startMarker);
+                map.removeLayer(endMarker);
+                amountMarkers = -1;
+                console.log("Removed all markers")
+            }
+            amountMarkers++;
         }
 
         map.on('click', onMapClick);
