--- a/html/html test.html
+++ b/html/html test.html
@@ -7,16 +7,19 @@
     crossorigin=""></script>
 	 <style> 
      	#map {height:  800px; position: abolute; top: 10; bottom: 10; left: 10; right: 10;}
+        html{
+            font-family: "Arial";  
+            color: white;
+        }
      </style>
 </head>                                                 
-<body>
+<body style="background-color:rgb(36, 36, 36);">
 	<h1>Programmierprojekt 2021/22 Wiegel, Koppenhoefer, Wannke</h1>
-	<h2>Eingebundene Karte:</h2>
-	<p>Karte ueber Leaflet eingbunden:</p>
+	<p>Karte &uumlber Leaflet eingbunden, Pfad über geoJSON realisiert:</p>
 
     <div id="map"></div>
     <script>
-        var map = L.map('map').setView([10, 10] , 1);
+        var map = L.map('map').setView([52, 11] , 6);
         var amountMarkers = 0;
         var startMarker = null;
         var endMarker = null;
@@ -35,6 +38,8 @@
         L.tileLayer('https://api.maptiler.com/maps/basic/256/{z}/{x}/{y}.png?key=Q6IOPULDWc8NFSXjmQD5', {
             attribution: '<a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>',
         }).addTo(map);
+        map.on('click', onMapClick);
+        
         
         function onMapClick(e) {
             // Startpoint
@@ -96,8 +101,6 @@
             layerGroup.addTo(map);
             layerGroup.addLayer(geojsonLayer);
         }
-
-        map.on('click', onMapClick);
     </script>
 
 </body>
