--- a/html/html test.html
+++ b/html/html test.html
@@ -6,10 +6,52 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     crossorigin=""></script>
 	 <style> 
-     	#map {height:  800px; position: abolute; top: 10; bottom: 10; left: 10; right: 10;}
+     	#map {height:  500px; position: abolute; top: 10; bottom: 10; left: 10; right: 10;}
         html{
             font-family: "Arial";  
             color: white;
+        }
+        .banana {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            /*top: 0;
+            left: 0;*/
+            margin: auto;
+            width: 198px;
+            height: 210px;
+            background-image: url("https://i.cloudup.com/q3ZLPB9kVH.png");
+            
+            -webkit-animation: play .8s steps(8) infinite;
+            -moz-animation: play .8s steps(8) infinite;
+                -ms-animation: play .8s steps(8) infinite;
+                -o-animation: play .8s steps(8) infinite;
+                    animation: play .8s steps(8) infinite;
+        }
+
+        @-webkit-keyframes play {
+        from { background-position:    0px; }
+            to { background-position: -1584px; }
+        }
+
+        @-moz-keyframes play {
+        from { background-position:    0px; }
+            to { background-position: -1584px; }
+        }
+
+        @-ms-keyframes play {
+        from { background-position:    0px; }
+            to { background-position: -1584px; }
+        }
+
+        @-o-keyframes play {
+        from { background-position:    0px; }
+            to { background-position: -1584px; }
+        }
+
+        @keyframes play {
+        from { background-position:    0px; }
+            to { background-position: -1584px; }
         }
      </style>
 </head>                                                 
@@ -19,7 +61,7 @@
 
     <div id="map"></div>
     <script>
-        var map = L.map('map').setView([52, 11] , 6);
+        var map = L.map('map').setView([51, 11] , 6);
         var amountMarkers = 0;
         var startMarker = null;
         var endMarker = null;
@@ -102,6 +144,6 @@
             layerGroup.addLayer(geojsonLayer);
         }
     </script>
-
+    <div class="banana"></div>
 </body>
 </html>
