--- a/html/html test.html
+++ b/html/html test.html
@@ -6,7 +6,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     crossorigin=""></script>
 	 <style> 
-     	#map {height:  500px; position: abolute; top: 10; bottom: 10; left: 10; right: 10;}
+     	#map {height: 600px; position: relative; top: 100px; /*bottom: 10; left: 10; right: 10;*/}
         html{
             font-family: "Arial";  
             color: white;
@@ -14,8 +14,8 @@
         .banana {
             position: absolute;
             right: 0;
-            bottom: 0;
-            /*top: 0;
+            top: 0;
+            /*bottom: 0;
             left: 0;*/
             margin: auto;
             width: 198px;
@@ -58,7 +58,7 @@
 <body style="background-color:rgb(36, 36, 36);">
 	<h1>Programmierprojekt 2021/22 Wiegel, Koppenhoefer, Wannke</h1>
 	<p>Karte &uumlber Leaflet eingbunden, Pfad über geoJSON realisiert:</p>
-
+    <div class="banana"></div>
     <div id="map"></div>
     <script>
         var map = L.map('map').setView([51, 11] , 6);
@@ -144,6 +144,5 @@
             layerGroup.addLayer(geojsonLayer);
         }
     </script>
-    <div class="banana"></div>
 </body>
 </html>
