started modifying the banana

--- a/html/html test.html
+++ b/html/html test.html
@@ -20,7 +20,7 @@
             margin: auto;
             width: 198px;
             height: 210px;
-            background-image: url("https://i.cloudup.com/q3ZLPB9kVH.png");
+            background-image: url("banana_anim_custom.png");
             
             -webkit-animation: play .8s steps(8) infinite;
             -moz-animation: play .8s steps(8) infinite;
@@ -57,7 +57,7 @@
 </head>                                                 
 <body style="background-color:rgb(36, 36, 36);">
 	<h1>Programmierprojekt 2021/22 Wiegel, Koppenhoefer, Wannke</h1>
-	<p>Karte &uumlber Leaflet eingbunden, Pfad über geoJSON realisiert:</p>
+	<p>Karte &uumlber Leaflet eingbunden, Pfad &uumlberber geoJSON realisiert:</p>
     <div class="banana"></div>
     <div id="map"></div>
     <script>
